--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jens Andreasson</title>
+    <title>Sjökorv</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main class="card">
-        <p>Mitt visitkort</p>
+        <div class="card__inner">
+            <img class="card__img" src="images/mana5280-keDQc1t0iFI-unsplash.jpg" alt="Good boy">
+            <div class="card__body">
+                <h1>Frans Utter</h1>
+                <h2>Lurig simmare</h2>
+            </div>
+        </div>
     </main>
 </body>
 </html>
